<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_medium"
                android:text="Device Configuration"
                android:textColor="@color/text_dark_color"
                android:textSize="@dimen/text_size_medium" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/ExtendedTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_tiny"
                android:layout_marginRight="@dimen/spacing_medium"
                android:hint="@string/reader_ip_address"
                app:endIconMode="clear_text"
                app:helperText="@string/ip_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/readerIPAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/choose_antenna"
                android:textColor="@color/text_dark_light_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@drawable/bg_rectangle_outline">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/antennaPortNumber"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:dropDownVerticalOffset="50dp"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/readerStartDelayLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_large"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/reader_start_delay"
                    android:textColor="@color/text_dark_light_color" />
                <RelativeLayout
                    android:id="@+id/readerStartDelayLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    app:layout_constraintEnd_toStartOf="@+id/readingDurationLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginRight="@dimen/spacing_medium"
                    app:layout_constraintTop_toBottomOf="@+id/readerStartDelayLabel"
                    android:background="@drawable/bg_rectangle_outline">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/readerStartDelay"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:dropDownVerticalOffset="50dp"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/readingDurationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/spacing_small"
                    app:layout_constraintStart_toStartOf="@+id/readingDurationLayout"
                    android:text="Reading duration"
                    android:textColor="@color/text_dark_light_color" />
                <RelativeLayout
                    android:id="@+id/readingDurationLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@+id/readerStartDelayLayout"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    app:layout_constraintTop_toBottomOf="@+id/readerStartDelayLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:background="@drawable/bg_rectangle_outline">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/readingDuration"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:dropDownVerticalOffset="50dp"
                        android:gravity="center"
                        android:spinnerMode="dropdown" />
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/tx_power"
                android:textColor="@color/text_dark_light_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@drawable/bg_rectangle_outline">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/txPower"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:dropDownVerticalOffset="50dp"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/rx_sensitivity"
                android:textColor="@color/text_dark_light_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@drawable/bg_rectangle_outline">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/rxSensitivity"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:dropDownVerticalOffset="50dp"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enableAntenna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_large"
                android:text="@string/enabled"
                android:checked="true"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:textSize="@dimen/text_size_small"
                app:switchPadding="@dimen/spacing_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonCancel"
                    style="@style/ExtendedButtonRound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:text="@string/dismiss"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSave"
                    style="@style/ExtendedButtonRound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>